phy: stm32: add support for STM32 USB2-FEMTO PHY
This patch adds USB2 phy transceiver driver for STM32MP2 USB Controllers
to support the High-Speed(+FS/LS), integrated from synopsys
(called FEMTO-PHY).
STM32MP2 Soc has 2 such phy(s), one for USB2-Host Controller, other for
the USB3-DRD Controller selected by separate syscfg offsets.
Usage reference count, needed for USB2-Host Controller where two ctrls
ehci & ohci both use the same femtophy

Change-Id: Id34bb6f3feb3be68593ce2b5bd4543c27310b878
Signed-off-by: Pankaj Dev <pankaj.dev@st.com>
Reviewed-on: https://gerrit.st.com/c/mpu/oe/st/u-boot/+/303887
ACI: CITOOLS <MDG-smet-aci-reviews@list.st.com>
Reviewed-by: Fabrice GASNIER <fabrice.gasnier@foss.st.com>
Reviewed-by: Patrice CHOTARD <patrice.chotard@foss.st.com>
Domain-Review: Fabrice GASNIER <fabrice.gasnier@foss.st.com>

--- a/drivers/phy/Kconfig
+++ b/drivers/phy/Kconfig
@@ -178,6 +178,14 @@ config PHY_STM32_USBPHYC
 	  between an HS USB OTG controller and an HS USB Host controller,
 	  selected by an USB switch.
 
+config PHY_STM32_USB2PHY
+	tristate "STMicroelectronics STM32 USB2 PHY Controller driver"
+	depends on PHY && ARCH_STM32MP
+	help
+	  Enable this to support the High-Speed USB2 transceivers that are part
+	  of some STMicroelectronics STM32 SoCs. The PHY integrated is from
+	  synopsys, and called USB2-PHY
+
 config MESON_GXBB_USB_PHY
 	bool "Amlogic Meson GXBB USB PHY"
 	depends on PHY && ARCH_MESON && MESON_GXBB
