usb: usb2h: add STM32 usb2h glue layer to manage usb2host ctrl
This patch adds the STM32 family glue logic to manage the usb2 host ctrl
Currently Only supported for STM32MP25, glue logic contains :
1. Setting polarity of VBUSEN (O)
2. Setting polarity of OVRCUR (I)

Signed-off-by: Pankaj Dev <pankaj.dev@st.com>
Change-Id: Id1146fd729ad9154877f1e75f76880d71f897821
Reviewed-on: https://gerrit.st.com/c/mpu/oe/st/u-boot/+/303896
Reviewed-by: Fabrice GASNIER <fabrice.gasnier@foss.st.com>
Reviewed-by: Patrice CHOTARD <patrice.chotard@foss.st.com>
Domain-Review: Fabrice GASNIER <fabrice.gasnier@foss.st.com>

--- a/drivers/usb/host/Kconfig
+++ b/drivers/usb/host/Kconfig
@@ -452,3 +452,17 @@ config USB_MAX_CONTROLLER_COUNT
 	depends on USB_EHCI_FSL || USB_XHCI_FSL || \
 		(SPL_USB_HOST && !DM_SPL_USB) || (USB_HOST && !DM_USB)
 	default 1
+
+config USB_STM32_USBH
+	bool "Support for STMicroelectronics STM32 Family USBH controller"
+	depends on DM && OF_CONTROL
+	select USB_HOST
+	select USB_EHCI_HCD
+	select USB_EHCI_GENERIC
+	select USB_OHCI_HCD
+	select USB_OHCI_GENERIC
+	help
+	  STM32 Family USB 2.0 Host Controller includes generic EHCI and OHCI
+	  controller blocks to support High-Speed and Full+Low-Speed respectively
+	  This driver is to configure the glue logic to enable EHCI+OHCI controllers
+	  inside the USBH block.
