--- a/arch/arm/dts/stm32mp257f-ev1.dts
+++ b/arch/arm/dts/stm32mp257f-ev1.dts
@@ -29,6 +29,15 @@
 
 	chosen {
 		stdout-path = "serial0:115200n8";
+		#address-cells = <2>;
+		#size-cells = <2>;
+		ranges;
+
+		framebuffer {
+			compatible = "simple-framebuffer";
+			clocks = <&rcc CK_BUS_LTDC>;
+			status = "disabled";
+		};
 	};
 
 	clocks {
