--- a/configs/stm32mp25_defconfig
+++ b/configs/stm32mp25_defconfig
@@ -20,6 +20,7 @@ CONFIG_CUSTOM_SYS_INIT_SP_ADDR=0x90000000
 CONFIG_FIT=y
 CONFIG_BOOTDELAY=1
 CONFIG_BOOTCOMMAND="run bootcmd_stm32mp"
+CONFIG_FDT_SIMPLEFB=y
 CONFIG_CMD_BOOTZ=y
 CONFIG_SYS_BOOTM_LEN=0x2000000
 CONFIG_CMD_ADTIMG=y
