--- a/arch/arm/dts/stm32mp257f-dk-u-boot.dtsi
+++ b/arch/arm/dts/stm32mp257f-dk-u-boot.dtsi
@@ -10,3 +10,17 @@
 		u-boot,mmc-env-partition = "u-boot-env";
 	};
 };
+
+&usart2 {
+	u-boot,dm-pre-reloc;
+};
+
+&usart2_pins_a {
+	u-boot,dm-pre-reloc;
+	pins1 {
+		u-boot,dm-pre-reloc;
+	};
+	pins2 {
+		u-boot,dm-pre-reloc;
+	};
+};
