--- a/arch/arm/dts/stm32mp131.dtsi
+++ b/arch/arm/dts/stm32mp131.dtsi
@@ -104,15 +104,15 @@
 					#address-cells = <1>;
 					#size-cells = <0>;
 
-					scmi_reg11: voltd-reg11 {
+					scmi_reg11: regulator@0 {
 						reg = <VOLTD_SCMI_REG11>;
 						regulator-name = "reg11";
 					};
-					scmi_reg18: voltd-reg18 {
+					scmi_reg18: regulator@1 {
 						reg = <VOLTD_SCMI_REG18>;
 						regulator-name = "reg18";
 					};
-					scmi_usb33: voltd-usb33 {
+					scmi_usb33: regulator@2 {
 						reg = <VOLTD_SCMI_USB33>;
 						regulator-name = "usb33";
 					};
@@ -330,6 +330,11 @@
 			dma-names = "up";
 			status = "disabled";
 
+			counter {
+				compatible = "st,stm32-timer-counter";
+				status = "disabled";
+			};
+
 			timer@5 {
 				compatible = "st,stm32h7-timer-trigger";
 				reg = <5>;
@@ -349,6 +354,11 @@
 			dmas = <&dmamux1 70 0x400 0x1>;
 			dma-names = "up";
 			status = "disabled";
+
+			counter {
+				compatible = "st,stm32-timer-counter";
+				status = "disabled";
+			};
 
 			timer@6 {
 				compatible = "st,stm32h7-timer-trigger";
@@ -836,7 +846,7 @@
 		};
 
 		exti: interrupt-controller@5000d000 {
-			compatible = "st,stm32mp1-exti", "syscon";
+			compatible = "st,stm32mp1-exti";
 			interrupt-controller;
 			#interrupt-cells = <2>;
 			#address-cells = <0>;
@@ -1268,6 +1278,11 @@
 				feature-domains = <&etzpc STM32MP1_ETZPC_TIM12_ID>;
 				status = "disabled";
 
+				counter {
+					compatible = "st,stm32-timer-counter";
+					status = "disabled";
+				};
+
 				pwm {
 					compatible = "st,stm32-pwm";
 					#pwm-cells = <3>;
@@ -1293,6 +1308,11 @@
 				feature-domains = <&etzpc STM32MP1_ETZPC_TIM13_ID>;
 				status = "disabled";
 
+				counter {
+					compatible = "st,stm32-timer-counter";
+					status = "disabled";
+				};
+
 				pwm {
 					compatible = "st,stm32-pwm";
 					#pwm-cells = <3>;
@@ -1317,6 +1337,11 @@
 				clock-names = "int";
 				feature-domains = <&etzpc STM32MP1_ETZPC_TIM14_ID>;
 				status = "disabled";
+
+				counter {
+					compatible = "st,stm32-timer-counter";
+					status = "disabled";
+				};
 
 				pwm {
 					compatible = "st,stm32-pwm";
@@ -1348,6 +1373,11 @@
 				feature-domains = <&etzpc STM32MP1_ETZPC_TIM15_ID>;
 				status = "disabled";
 
+				counter {
+					compatible = "st,stm32-timer-counter";
+					status = "disabled";
+				};
+
 				pwm {
 					compatible = "st,stm32-pwm";
 					#pwm-cells = <3>;
@@ -1376,6 +1406,11 @@
 				feature-domains = <&etzpc STM32MP1_ETZPC_TIM16_ID>;
 				status = "disabled";
 
+				counter {
+					compatible = "st,stm32-timer-counter";
+					status = "disabled";
+				};
+
 				pwm {
 					compatible = "st,stm32-pwm";
 					#pwm-cells = <3>;
@@ -1403,6 +1438,11 @@
 				dma-names = "ch1", "up";
 				feature-domains = <&etzpc STM32MP1_ETZPC_TIM17_ID>;
 				status = "disabled";
+
+				counter {
+					compatible = "st,stm32-timer-counter";
+					status = "disabled";
+				};
 
 				pwm {
 					compatible = "st,stm32-pwm";
@@ -1671,18 +1711,18 @@
 				};
 			};
 
-			reboot_mode: reboot_mode {
+			reboot_mode: reboot-mode {
 				compatible = "nvmem-reboot-mode";
 				nvmem-cells = <&boot_mode>;
 				nvmem-cell-names = "reboot-mode";
-				mode-normal = <0>;
-				mode-fastboot = <0x1>;
-				mode-recovery = <0x2>;
-				mode-stm32cubeprogrammer = <0x3>;
+				mode-normal = <0x00>;
+				mode-fastboot = <0x01>;
+				mode-recovery = <0x02>;
+				mode-stm32cubeprogrammer = <0x03>;
 				mode-ums_mmc0 = <0x10>;
 				mode-ums_mmc1 = <0x11>;
 				mode-ums_mmc2 = <0x12>;
-				mode-romcode_serial = <0xFF>;
+				mode-romcode_serial = <0xff>;
 			};
 		};
 
@@ -1696,7 +1736,6 @@
 			compatible = "st,stm32mp135-pinctrl";
 			ranges = <0 0x50002000 0x8400>;
 			interrupt-parent = <&exti>;
-			st,syscfg = <&exti 0x60 0xff>;
 			pins-are-numbered;
 
 			gpioa: gpio@50002000 {
