--- a/arch/arm/dts/stm32mp151.dtsi
+++ b/arch/arm/dts/stm32mp151.dtsi
@@ -240,7 +240,7 @@
 		};
 
 		exti: interrupt-controller@5000d000 {
-			compatible = "st,stm32mp1-exti", "syscon";
+			compatible = "st,stm32mp1-exti";
 			interrupt-controller;
 			#interrupt-cells = <2>;
 			#address-cells = <0>;
@@ -647,6 +647,11 @@
 				feature-domains = <&etzpc STM32MP1_ETZPC_TIM6_ID>;
 				status = "disabled";
 
+				counter {
+					compatible = "st,stm32-timer-counter";
+					status = "disabled";
+				};
+
 				timer@5 {
 					compatible = "st,stm32h7-timer-trigger";
 					reg = <5>;
@@ -668,6 +673,11 @@
 				feature-domains = <&etzpc STM32MP1_ETZPC_TIM7_ID>;
 				status = "disabled";
 
+				counter {
+					compatible = "st,stm32-timer-counter";
+					status = "disabled";
+				};
+
 				timer@6 {
 					compatible = "st,stm32h7-timer-trigger";
 					reg = <6>;
@@ -686,6 +696,11 @@
 				clock-names = "int";
 				feature-domains = <&etzpc STM32MP1_ETZPC_TIM12_ID>;
 				status = "disabled";
+
+				counter {
+					compatible = "st,stm32-timer-counter";
+					status = "disabled";
+				};
 
 				pwm {
 					compatible = "st,stm32-pwm";
@@ -712,6 +727,11 @@
 				feature-domains = <&etzpc STM32MP1_ETZPC_TIM13_ID>;
 				status = "disabled";
 
+				counter {
+					compatible = "st,stm32-timer-counter";
+					status = "disabled";
+				};
+
 				pwm {
 					compatible = "st,stm32-pwm";
 					#pwm-cells = <3>;
@@ -736,6 +756,11 @@
 				clock-names = "int";
 				feature-domains = <&etzpc STM32MP1_ETZPC_TIM14_ID>;
 				status = "disabled";
+
+				counter {
+					compatible = "st,stm32-timer-counter";
+					status = "disabled";
+				};
 
 				pwm {
 					compatible = "st,stm32-pwm";
@@ -1214,6 +1239,11 @@
 				feature-domains = <&etzpc STM32MP1_ETZPC_TIM15_ID>;
 				status = "disabled";
 
+				counter {
+					compatible = "st,stm32-timer-counter";
+					status = "disabled";
+				};
+
 				pwm {
 					compatible = "st,stm32-pwm";
 					#pwm-cells = <3>;
@@ -1242,11 +1272,17 @@
 				feature-domains = <&etzpc STM32MP1_ETZPC_TIM16_ID>;
 				status = "disabled";
 
+				counter {
+					compatible = "st,stm32-timer-counter";
+					status = "disabled";
+				};
+
 				pwm {
 					compatible = "st,stm32-pwm";
 					#pwm-cells = <3>;
 					status = "disabled";
 				};
+
 				timer@15 {
 					compatible = "st,stm32h7-timer-trigger";
 					reg = <15>;
@@ -1268,6 +1304,11 @@
 				dma-names = "ch1", "up";
 				feature-domains = <&etzpc STM32MP1_ETZPC_TIM17_ID>;
 				status = "disabled";
+
+				counter {
+					compatible = "st,stm32-timer-counter";
+					status = "disabled";
+				};
 
 				pwm {
 					compatible = "st,stm32-pwm";
@@ -2032,18 +2073,18 @@
 				};
 			};
 
-			reboot_mode: reboot_mode {
+			reboot_mode: reboot-mode {
 				compatible = "nvmem-reboot-mode";
 				nvmem-cells = <&boot_mode>;
 				nvmem-cell-names = "reboot-mode";
-				mode-normal = <0>;
-				mode-fastboot = <0x1>;
-				mode-recovery = <0x2>;
-				mode-stm32cubeprogrammer = <0x3>;
+				mode-normal = <0x00>;
+				mode-fastboot = <0x01>;
+				mode-recovery = <0x02>;
+				mode-stm32cubeprogrammer = <0x03>;
 				mode-ums_mmc0 = <0x10>;
 				mode-ums_mmc1 = <0x11>;
 				mode-ums_mmc2 = <0x12>;
-				mode-romcode_serial = <0xFF>;
+				mode-romcode_serial = <0xff>;
 			};
 		};
 
@@ -2057,7 +2098,6 @@
 			compatible = "st,stm32mp157-pinctrl";
 			ranges = <0 0x50002000 0xa400>;
 			interrupt-parent = <&exti>;
-			st,syscfg = <&exti 0x60 0xff>;
 			hwlocks = <&hsem 0 1>;
 			pins-are-numbered;
 
@@ -2190,7 +2230,6 @@
 			ranges = <0 0x54004000 0x400>;
 			pins-are-numbered;
 			interrupt-parent = <&exti>;
-			st,syscfg = <&exti 0x60 0xff>;
 			hwlocks = <&hsem 0 1>;
 
 			gpioz: gpio@54004000 {
