cfi: Add SEMPER S26 flashes with HYPERBUS interface support
Patch download from infineon website:
https://softwaretools.infineon.com/tools/com.ifx.tb.tool.semperflash
withhyperbusinterfaceubootdriver?_ga=2.137450288.1275909858.1700813871
-706382022.1700813871

Several checkpatch warnings has been fixed regarding original patches,
FLASH_CFI_SFDP flag support added in Kconfig...

Add support for the following S26 SEMPER flashes:
 _ s26hl512t
 _ s26hl01gt
 _ s26hs512t
 _ s26hs01gt

Signed-off-by: Takahiro Kuwano <Takahiro.Kuwano@infineon.com>
Signed-off-by: Patrice Chotard <patrice.chotard@foss.st.com>
Change-Id: Ia6c7080521ceb00a198696355f39f900e7f8d0f9
Reviewed-on: https://gerrit.st.com/c/mpu/oe/st/u-boot/+/353442
Domain-Review: Christophe KERELLO <christophe.kerello@st.com>

--- a/drivers/mtd/Kconfig
+++ b/drivers/mtd/Kconfig
@@ -118,6 +118,13 @@ config FLASH_CFI_MTD
 	  in the drivers directory. The driver exports CFI flash
 	  to the MTD layer.
 
+ config FLASH_CFI_SFDP
+	bool "Enable SFDP parsing"
+	depends on FLASH_CFI_DRIVER
+	help
+	  This option enables the SFDP parsing which allows
+	  to support SEMPER flashes.
+
 config SYS_FLASH_PROTECTION
 	bool "Use hardware flash protection"
 	depends on FLASH_CFI_DRIVER
