--- a/configs/stm32mp25_defconfig
+++ b/configs/stm32mp25_defconfig
@@ -83,6 +83,7 @@ CONFIG_SYS_FLASH_CFI_WIDTH_16BIT=y
 CONFIG_CFI_FLASH=y
 CONFIG_SYS_FLASH_USE_BUFFER_WRITE=y
 CONFIG_FLASH_CFI_MTD=y
+CONFIG_FLASH_CFI_SFDP=y
 CONFIG_SYS_FLASH_CFI=y
 CONFIG_STM32_HYPERBUS=y
 CONFIG_MTD_RAW_NAND=y
