--- a/arch/arm/dts/stm32mp257f-dk.dts
+++ b/arch/arm/dts/stm32mp257f-dk.dts
@@ -101,6 +101,19 @@
 		};
 	};
 
+	hdmi: connector {
+		compatible = "hdmi-connector";
+		label = "hdmi";
+		type = "a";
+		hdmi-pwr-supply = <&scmi_v5v_hdmi>;
+
+		port {
+			hdmi_connector_in: endpoint {
+				remote-endpoint = <&adv7535_out>;
+			};
+		};
+	};
+
 	memory@80000000 {
 		device_type = "memory";
 		reg = <0x0 0x80000000 0x1 0x0>;
@@ -160,7 +173,7 @@
 	};
 };
 
-&a35ssc_m33 {
+&a35ss_syscfg {
 	status = "okay";
 };
 
@@ -306,6 +319,12 @@
 		interrupt-parent = <&gpiob>;
 		interrupts = <4 IRQ_TYPE_EDGE_FALLING>;
 		reset-gpios = <&gpiob 6 GPIO_ACTIVE_LOW>;
+		avdd-supply = <&scmi_v1v8>;
+		dvdd-supply = <&scmi_v1v8>;
+		pvdd-supply = <&scmi_v1v8>;
+		a2vdd-supply = <&scmi_v1v8>;
+		v3p3-supply = <&scmi_v3v3>;
+		v1p2-supply = <&scmi_v1v8>;
 
 		ports {
 			#address-cells = <1>;
@@ -315,6 +334,13 @@
 				reg = <0>;
 				adv7535_in: endpoint {
 					remote-endpoint = <&dsi_out1>;
+				};
+			};
+
+			port@1 {
+				reg = <1>;
+				adv7535_out: endpoint {
+					remote-endpoint = <&hdmi_connector_in>;
 				};
 			};
 
@@ -368,6 +394,19 @@
 			};
 		};
 	};
+};
+
+&i2c8 {
+	pinctrl-names = "default", "sleep";
+	pinctrl-0 = <&i2c8_pins_a>;
+	pinctrl-1 = <&i2c8_sleep_pins_a>;
+	i2c-scl-rising-time-ns = <185>;
+	i2c-scl-falling-time-ns = <20>;
+	clock-frequency = <100000>;
+	status = "disabled";
+	/* spare dmas for other usage */
+	/delete-property/dmas;
+	/delete-property/dma-names;
 };
 
 &i2s2 {
@@ -437,7 +476,7 @@
 	memory-region = <&cm33_cube_fw>, <&cm33_cube_data>,
 			<&ipc_shmem_1>, <&vdev0vring0>,
 			<&vdev0vring1>, <&vdev0buffer>;
-	st,syscfg-nsvtor = <&a35ssc_m33 0x8 0xffffff80>;
+	st,syscfg-nsvtor = <&a35ss_syscfg 0xa8 0xffffff80>;
 	status = "okay";
 };
 
@@ -500,19 +539,6 @@
 			};
 		};
 	};
-};
-
-&i2c8 {
-	pinctrl-names = "default", "sleep";
-	pinctrl-0 = <&i2c8_pins_a>;
-	pinctrl-1 = <&i2c8_sleep_pins_a>;
-	i2c-scl-rising-time-ns = <185>;
-	i2c-scl-falling-time-ns = <20>;
-	clock-frequency = <100000>;
-	status = "disabled";
-	/* spare dmas for other usage */
-	/delete-property/dmas;
-	/delete-property/dma-names;
 };
 
 &mlahb {
@@ -737,5 +763,13 @@
 		maximum-speed = "high-speed";
 		role-switch-default-mode = "peripheral";
 		usb-role-switch;
+	};
+};
+
+/* use LPTIMER with tick broadcast for suspend mode */
+&lptimer3 {
+	status = "okay";
+	timer {
+		status = "okay";
 	};
 };
