--- a/arch/arm/dts/stm32mp257f-ev1.dts
+++ b/arch/arm/dts/stm32mp257f-ev1.dts
@@ -61,6 +61,7 @@
 			label = "User-1";
 			linux,code = <BTN_1>;
 			gpios = <&gpiod 2 GPIO_ACTIVE_HIGH>;
+			wakeup-source;
 			status = "okay";
 		};
 	};
@@ -74,6 +75,18 @@
 			gpios = <&gpioj 7 GPIO_ACTIVE_HIGH>;
 			linux,default-trigger = "heartbeat";
 			default-state = "off";
+		};
+	};
+
+	hdmi: connector {
+		compatible = "hdmi-connector";
+		label = "hdmi";
+		type = "a";
+
+		port {
+			hdmi_connector_in: endpoint {
+				remote-endpoint = <&adv7535_out>;
+			};
 		};
 	};
 
@@ -135,7 +148,7 @@
 	};
 };
 
-&a35ssc_m33 {
+&a35ss_syscfg {
 	status = "okay";
 };
 
@@ -191,8 +204,6 @@
 };
 
 &dsi {
-	#address-cells = <1>;
-	#size-cells = <0>;
 	status = "disabled";
 
 	ports {
@@ -217,38 +228,25 @@
 
 &eth1 {
 	status = "okay";
-	pinctrl-0 = <&eth1_mdio_pins_a>;
-	pinctrl-1 = <&eth1_mdio_sleep_pins_a>;
+	pinctrl-0 = <&eth1_rgmii_pins_a &eth1_mdio_pins_a>;
+	pinctrl-1 = <&eth1_rgmii_sleep_pins_a &eth1_mdio_sleep_pins_a>;
 	pinctrl-names = "default", "sleep";
-	phy-mode = "rgmii";
+	phy-mode = "rgmii-id";
 	max-speed = <1000>;
+	phy-handle = <&phy1_eth1>;
 	st,eth-clk-sel;
-
-	fixed_link: fixed-link {
-		speed = <1000>;
-		full-duplex;
-	};
 
 	mdio1 {
 		#address-cells = <1>;
 		#size-cells = <0>;
 		compatible = "snps,dwmac-mdio";
-
 		phy1_eth1: ethernet-phy@4 {
-			compatible = "ethernet-phy-id001c.c916",
-				     "ethernet-phy-ieee802.3-c22";
-			realtek,eee-disable;
-			reg = <4>;
-		};
-
-		phy2_eth1: ethernet-phy@5 {
-			compatible = "ethernet-phy-id001c.c916",
-				     "ethernet-phy-ieee802.3-c22";
+			compatible = "ethernet-phy-id001c.c916";
 			reset-gpios =  <&gpioj 9 GPIO_ACTIVE_LOW>;
 			reset-assert-us = <10000>;
 			reset-deassert-us = <80000>;
 			realtek,eee-disable;
-			reg = <5>;
+			reg = <4>;
 		};
 	};
 };
@@ -299,9 +297,9 @@
 	pinctrl-names = "default", "sleep";
 	pinctrl-0 = <&i2c2_pins_a>;
 	pinctrl-1 = <&i2c2_sleep_pins_a>;
-	i2c-scl-rising-time-ns = <185>;
-	i2c-scl-falling-time-ns = <20>;
-	clock-frequency = <100000>;
+	i2c-scl-rising-time-ns = <100>;
+	i2c-scl-falling-time-ns = <13>;
+	clock-frequency = <400000>;
 	status = "okay";
 	/* spare dmas for other usage */
 	/delete-property/dmas;
@@ -350,6 +348,13 @@
 				};
 			};
 
+			port@1 {
+				reg = <1>;
+				adv7535_out: endpoint {
+					remote-endpoint = <&hdmi_connector_in>;
+				};
+			};
+
 			port@2 {
 				reg = <2>;
 				adv7535_tx_endpoint: endpoint {
@@ -369,6 +374,19 @@
 	};
 };
 
+&i2c8 {
+	pinctrl-names = "default", "sleep";
+	pinctrl-0 = <&i2c8_pins_a>;
+	pinctrl-1 = <&i2c8_sleep_pins_a>;
+	i2c-scl-rising-time-ns = <57>;
+	i2c-scl-falling-time-ns = <7>;
+	clock-frequency = <400000>;
+	status = "disabled";
+	/* spare dmas for other usage */
+	/delete-property/dmas;
+	/delete-property/dma-names;
+};
+
 &i2s2 {
 	pinctrl-names = "default", "sleep";
 	pinctrl-0 = <&i2s2_pins_a>;
@@ -386,6 +404,14 @@
 
 &ipcc1 {
 	status = "okay";
+};
+
+/* use LPTIMER with tick broadcast for suspend mode */
+&lptimer3 {
+	status = "okay";
+	timer {
+		status = "okay";
+	};
 };
 
 &ltdc {
@@ -437,7 +463,7 @@
 	memory-region = <&cm33_cube_fw>, <&cm33_cube_data>,
 			<&ipc_shmem_1>, <&vdev0vring0>,
 			<&vdev0vring1>, <&vdev0buffer>;
-	st,syscfg-nsvtor = <&a35ssc_m33 0x8 0xffffff80>;
+	st,syscfg-nsvtor = <&a35ss_syscfg 0xa8 0xffffff80>;
 	status = "okay";
 };
 
@@ -529,9 +555,10 @@
 };
 
 &pcie_rc {
-	pinctrl-names = "default", "init";
+	pinctrl-names = "default", "init", "sleep";
 	pinctrl-0 = <&pcie_pins_a>;
 	pinctrl-1 = <&pcie_init_pins_a>;
+	pinctrl-2 = <&pcie_sleep_pins_a>;
 	reset-gpios = <&gpioj 8 GPIO_ACTIVE_LOW>;
 	status = "okay";
 };
@@ -623,7 +650,7 @@
 };
 
 &switch0 {
-	status = "okay";
+	status = "disabled";
 	pinctrl-0 = <&eth1_rgmii_pins_a>, <&eth3_rgmii_pins_a>;
 	pinctrl-1 = <&eth1_rgmii_sleep_pins_a>, <&eth3_rgmii_sleep_pins_a>;
 	pinctrl-names = "default", "sleep";
