ARM: dts: stm32: Disable DSI and LVDS for stm32mp257f-dk
Disable DSI and LVDS nodes to avoid crash into stm32_dsi_attach()

Change-Id: I0818e22df92f38a21f6e9e42767ece53943c5c09
Signed-off-by: Francois Choleau <francois.choleau@st.com>
Reviewed-on: https://gerrit.st.com/c/mpu/oe/st/u-boot/+/347103
Reviewed-by: Patrice CHOTARD <patrice.chotard@foss.st.com>
ACI: CIBUILD <MDG-smet-aci-builds@list.st.com>
ACI: CITOOLS <MDG-smet-aci-reviews@list.st.com>
Tested-by: Patrice CHOTARD <patrice.chotard@foss.st.com>
Domain-Review: Patrice CHOTARD <patrice.chotard@foss.st.com>

--- a/arch/arm/dts/stm32mp257f-dk.dts
+++ b/arch/arm/dts/stm32mp257f-dk.dts
@@ -123,7 +123,7 @@
 		compatible = "edt,etml0700z9ndha", "panel-lvds";
 		enable-gpios = <&gpioi 4 GPIO_ACTIVE_HIGH>;
 		backlight = <&panel_lvds_backlight>;
-		status = "okay";
+		status = "disabled";
 
 		width-mm = <156>;
 		height-mm = <92>;
@@ -215,7 +215,7 @@
 };
 
 &dsi {
-	status = "okay";
+	status = "disabled";
 
 	ports {
 		#address-cells = <1>;
@@ -429,7 +429,7 @@
 };
 
 &ltdc {
-	status = "okay";
+	status = "disabled";
 
 	port {
 		#address-cells = <1>;
@@ -448,7 +448,7 @@
 };
 
 &lvds {
-	status = "okay";
+	status = "disabled";
 	backlight = <&panel_lvds_backlight>;
 	ports {
 		#address-cells = <1>;
