ARM: dts: stm32: Enable DSI and LVDS for stm32mp257f-dk
Enable DSI and LVDS nodes to activate the splash-screen.

Change-Id: I54d928d5283905ed990370279bd65dba4bb37e59
Signed-off-by: Yannick Fertre <yannick.fertre@foss.st.com>
Reviewed-on: https://gerrit.st.com/c/mpu/oe/st/u-boot/+/350706
Reviewed-by: Patrice CHOTARD <patrice.chotard@foss.st.com>
ACI: CITOOLS <MDG-smet-aci-reviews@list.st.com>

--- a/arch/arm/dts/stm32mp257f-dk.dts
+++ b/arch/arm/dts/stm32mp257f-dk.dts
@@ -35,7 +35,6 @@
 
 		framebuffer {
 			compatible = "simple-framebuffer";
-			clocks = <&rcc CK_BUS_LTDC>;
 			status = "disabled";
 		};
 	};
@@ -123,7 +122,7 @@
 		compatible = "edt,etml0700z9ndha", "panel-lvds";
 		enable-gpios = <&gpioi 4 GPIO_ACTIVE_HIGH>;
 		backlight = <&panel_lvds_backlight>;
-		status = "disabled";
+		status = "okay";
 
 		width-mm = <156>;
 		height-mm = <92>;
@@ -215,7 +214,7 @@
 };
 
 &dsi {
-	status = "disabled";
+	status = "okay";
 
 	ports {
 		#address-cells = <1>;
@@ -429,7 +428,7 @@
 };
 
 &ltdc {
-	status = "disabled";
+	status = "okay";
 
 	port {
 		#address-cells = <1>;
@@ -448,7 +447,7 @@
 };
 
 &lvds {
-	status = "disabled";
+	status = "okay";
 	backlight = <&panel_lvds_backlight>;
 	ports {
 		#address-cells = <1>;
